	PR libstdc++/56613 	* include/bits/stl_tree.h (_Rb_tree::_M_create_node): Use 	allocator_traits instead of calling construct directly. 	* testsuite/23_containers/map/56613.cc: New.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@196666 138bc75d-0d04-0410-961f-82ee72b054a4